--- a/Octokit.Tests/OctoKit.Tests-NetCore45.csproj
+++ b/Octokit.Tests/OctoKit.Tests-NetCore45.csproj
@@ -184,6 +184,10 @@
       <Project>{c8bc13b6-3fa3-4716-827d-e7706f976fe1}</Project>
       <Name>Octokit-NetCore45</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Octokit\Octokit.csproj">
+      <Project>{08DD4305-7787-4823-A53F-4D0F725A07F3}</Project>
+      <Name>Octokit</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
